@@ -21,6 +21,7 @@ config.cache
 derp.h
 calm
 innocent-pear-c++
+innocent-pear-cc
 innocent-pear-doge
 innocent-pear-dogecoin
 keccak
