@@ -8,27 +8,35 @@ sudo: required
 env:
   - TARGET=
     CXX_FOR_TARGET=g++
+    CC_FOR_TARGET=gcc
   - TARGET=
     CXX_FOR_TARGET=clang++
+    CC_FOR_TARGET=clang
   - TARGET=
     CXXFLAGS_FOR_TARGET="-O3 -fPIC -pie -Wall -static-libstdc++"
   - TARGET=i686-linux-gnu
     CXX_FOR_TARGET=clang++
+    CC_FOR_TARGET=clang
     CXXFLAGS_FOR_TARGET="-m32 -march=i686 -O3 -Wall -static"
   - TARGET=i386-linux-gnu
     CXX_FOR_TARGET=clang++
+    CC_FOR_TARGET=clang
     CXXFLAGS_FOR_TARGET="-m32 -march=i386 -O3 -Wall -static"
   - TARGET=i686-linux-gnu
     CXX_FOR_TARGET=clang++
+    CC_FOR_TARGET=clang
     CXXFLAGS_FOR_TARGET="-m32 -march=i686 -O3 -fPIC -pie -Wall -static-libstdc++"
   - TARGET=i686-linux-gnu
     CXX_FOR_TARGET=g++-5
+    CC_FOR_TARGET=gcc-5
     CXXFLAGS_FOR_TARGET="-m32 -march=i686 -O3 -Wall -static"
   - TARGET=i386-linux-gnu
     CXX_FOR_TARGET=g++-5
+    CC_FOR_TARGET=gcc-5
     CXXFLAGS_FOR_TARGET="-m32 -march=i386 -O3 -Wall -static"
   - TARGET=i686-linux-gnu
     CXX_FOR_TARGET=g++-5
+    CC_FOR_TARGET=gcc-5
     CXXFLAGS_FOR_TARGET="-m32 -march=i686 -O3 -fPIC -pie -Wall -static-libstdc++"
   - TARGET=armv7-a-linux-gnueabi
   - TARGET=armv7-a-linux-gnueabi
